# prayer-times-applet

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile
i18n/ar/: prayer_times_applet.ftl
i18n/en/: prayer_times_applet.ftl
res/: com.github.BKSalman.PrayerTimesApplet.desktop  com.github.BKSalman.PrayerTimesApplet.metainfo.xml
src/: app.rs  lib.rs  main.rs
src/core/: localization.rs
