[package]
name = "prayer-times-applet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
